<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <TextView
        android:id="@+id/textView_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/Name_item" />

    <TextView
        android:id="@+id/textView_epc"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="@string/TextView_Null" />


</LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_area_text" />

        <Spinner
            android:id="@+id/spinner_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Search_Btn_T" />

    <Button
        android:id="@+id/btn_read"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/Read_Btn_T" />

    <Button
        android:id="@+id/btn_write"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/Write_Btn_T" />
    <Button
        android:id="@+id/btn_direction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/Direction_Btn_T" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_setpasswd"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/SetPasswd_Btn" />

        <Button
            android:id="@+id/btn_setepc"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/SetEPC_Btn" />

        <Button
            android:id="@+id/btn_lock"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Lock_Btn" />

        <Button
            android:id="@+id/btn_check"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_set" />

        <Button
            android:id="@+id/btn_inv_set"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/inv_set"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_spt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:text="@string/spt"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextView_Null" />

    <TextView
        android:id="@+id/textView_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextView_Null" />

</LinearLayout>
