<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_6b_status"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Item_Tag_EPC" />

        <TextView
            android:id="@+id/textView_read_epc"
            android:layout_width="240dp"
            android:layout_height="39dp"
            android:layout_weight="0.33"
            android:text="@string/TextView_Null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/read_addr" />

        <EditText
            android:id="@+id/editText_read_addr"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/read_count" />

        <EditText
            android:id="@+id/editText_read_count"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_rp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/write_passwd" />

        <EditText
            android:id="@+id/editText_rp"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/VALUE_ZERO" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_read_status"
        android:layout_width="match_parent"
        android:textColor="#ea0404"
        android:layout_height="wrap_content"
        android:layout_weight="0.28"
        android:text="@string/TextView_Null" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_read_ok"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/Read_Btn_T" />

        <Button
            android:id="@+id/btn_read_cancle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:text="@string/Cancle_btn" />
    </LinearLayout>

</LinearLayout>