<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_inv_rt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Item_Tag_EPC" />

        <TextView
            android:id="@+id/textView_write_epc"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_weight="0.47"
            android:text="@string/TextView_Null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/write_addr" />

        <EditText
            android:id="@+id/editText_write_addr"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/write_count" />

        <EditText
            android:id="@+id/editText_write_count"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/write_passwd" />

        <EditText
            android:id="@+id/editText_write_passwd"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/VALUE_ZERO" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/write_content" />

        <EditText
            android:id="@+id/et_content"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView_write_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.21"
        android:text="@string/TextView_Null"
        android:textColor="#f40404" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_write_ok"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/Write_Btn_T" />

        <Button
            android:id="@+id/btn_write_cancle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.27"
            android:text="@string/Cancle_btn" />
    </LinearLayout>

</LinearLayout>