<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/btn_6b_status"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Item_Tag_EPC" />

        <TextView
            android:id="@+id/textView_lock_epc"
            android:layout_width="240dp"
            android:layout_height="43dp"
            android:layout_weight="0.14"
            android:text="@string/TextView_Null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="@string/Item_Lock_Area" />

        <Spinner
            android:id="@+id/spinner_lock_area"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:text="@string/Item_Lock_Action" />

        <Spinner
            android:id="@+id/spinner_lock_style"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.36" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Item_Access_Pswd" />

        <EditText
            android:id="@+id/editText_lock_passwd"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/VALUE_ZERO" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:textColor="#f20707"
        android:id="@+id/textView_lock_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.36"
        android:text="@string/TextView_Null" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_lock_ok"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/Ok_btn" />

        <Button
            android:id="@+id/btn_lock_cancle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.23"
            android:text="@string/Cancle_btn" />
    </LinearLayout>

</LinearLayout>