<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_6b_status"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Item_Tag_EPC" />

        <TextView
            android:id="@+id/textView_setpawd_epc"
            android:layout_width="240dp"
            android:layout_height="44dp"
            android:layout_weight="0.47"
            android:text="@string/TextView_Null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Item_Access_Pswd" />

        <EditText
            android:inputType="number"
            android:id="@+id/editText_setpawd_accesspd"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/VALUE_ZERO">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Item_Pswd_Type" />

        <Spinner
            android:id="@+id/spinner_setpawd_paswd"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.93" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Item_New_Password" />

        <EditText
            android:inputType="number"
            android:id="@+id/editText_setpawd_newpd"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.94" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_setpawd_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.23"
        android:text="@string/TextView_Null"
        android:textColor="#f11304" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_setpawd_ok"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.41"
            android:text="@string/Ok_btn" />

        <Button
            android:id="@+id/btn_setpawd_cancle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/Cancle_btn" />
    </LinearLayout>

</LinearLayout>